WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218933
[LFC][IFC] Inline level box with negative vertical margin should not be considered empty
https://bugs.webkit.org/show_bug.cgi?id=218933
Summary
[LFC][IFC] Inline level box with negative vertical margin should not be consi...
alan
Reported
2020-11-13 20:13:29 PST
e.g. height: 100px; margin-top: -100px;
Attachments
Patch
(2.42 KB, patch)
2020-11-13 20:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-11-13 20:24:13 PST
Created
attachment 414120
[details]
Patch
EWS
Comment 2
2020-11-14 05:54:06 PST
Committed
r269816
: <
https://trac.webkit.org/changeset/269816
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414120
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-14 05:55:18 PST
<
rdar://problem/71400745
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug