[LFC][IFC] Inline level box with negative vertical margin should not be considered empty https://bugs.webkit.org/show_bug.cgi?id=218933

Reviewed by Antti Koivisto.

While in practice when the negative vertical margin makes the layout bounds empty (e.g: height: 100px; margin-top: -100px;),
and the inline level box contributes 0px to the line box height, it should not be considered empty.

* layout/inlineformatting/InlineFormattingContextGeometry.cpp:
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):


Canonical link: https://commits.webkit.org/231581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269816 268f45cc-cd09-0410-ab3c-d52691b4dbfc